--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,15 @@
 plugins {
     id 'java-library'
     id 'io.qameta.allure' version '2.8.1'
-
 }
 
 repositories {
     mavenCentral()
 }
 
-def junitVersion = "5.7.2",
-    allureVersion = "2.14.0",
-    selenideVersion = "5.24.0"
+def junitVersion = '5.8.2',
+    allureVersion = '2.17.2',
+    selenideVersion = '6.1.2'
 
 allure {
     version = allureVersion
@@ -24,11 +23,11 @@ allure {
 
 dependencies {
     testImplementation(
-            "io.rest-assured:rest-assured:4.3.1",
-            "org.assertj:assertj-core:3.19.0",
-            "org.junit.jupiter:junit-jupiter-api:$junitVersion",
+            'io.rest-assured:rest-assured:4.4.0',
+            "io.qameta.allure:allure-rest-assured:$allureVersion",
             "com.codeborne:selenide:$selenideVersion",
-            "io.qameta.allure:allure-selenide:$allureVersion",)
+            'org.assertj:assertj-core:3.21.0',
+            "org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
